[package]
name = "Polymorph"
version = "0.1.0"
authors = ["SPIGS <paspielvogel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.23.0"
lazy_static = "1.4.0"
serde_json = "1.0"
bracket-lib = "0.8.1"
simplelog = "0.7.4"
log = "0.4.8"
toml = "0.5.6"
specs-derive = "0.4.1"
specs = "0.16.1"
object-pool = "0.4"
serde = { version = "1.0.104", features = ["derive"] }

